--- a/src/styles/utils/variables.css
+++ b/src/styles/utils/variables.css
@@ -14,6 +14,7 @@
   --secondary-color: #2036f7;
   --text-color: #000000;
   --button-color: #ff0000;
+  --error-color: #ff0000;
   --button-second-color: #c4c4c4;
   --light-color: #ffffff;
   /* End color          */
