--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,4 +2,4 @@
 @import url(utils/index.css);
 @import url(components/index.css);
 @import url(layout/index.css);
-@import url(pages/home/index.css);
+@import url(pages/index.css);
