--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,1 +1,5 @@
 @import url(button.css);
+@import url(modal-detail.css);
+@import url(modal-card.css);
+@import url(modal-language.css);
+@import url(modal-confirm.css);
