--- a/src/styles/base/typography.css
+++ b/src/styles/base/typography.css
@@ -66,6 +66,10 @@ h1 {
   text-transform: uppercase;
 }
 
+.text--capitalize {
+  text-transform: capitalize;
+}
+
 @font-face {
   font-family: "Inter";
   font-style: normal;
