--- a/src/styles/pages/home/language.css
+++ b/src/styles/pages/home/language.css
@@ -1,4 +1,5 @@
 .language {
+  position: relative;
   padding: 35px 100px;
   background: var(--primary-color);
   border-radius: 10px;
@@ -19,6 +20,7 @@
   background: var(--light-color);
   border: 1px solid transparent;
   border-radius: 10px;
+  text-transform: capitalize;
   cursor: pointer;
 }
 
@@ -35,6 +37,19 @@
 }
 
 .language__delete:hover {
+  opacity: 1;
+}
+
+.language__add {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.language__add:hover {
   opacity: 1;
 }
 
