--- a/src/styles/pages/home/cards.css
+++ b/src/styles/pages/home/cards.css
@@ -52,3 +52,31 @@
   border-radius: 15px;
   object-fit: cover;
 }
+
+.card__list__empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.card__list__empty img {
+  animation: moveLeftRight 4s infinite;
+}
+
+@keyframes moveLeftRight {
+  25% {
+    transform: rotate(-22deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(22deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
