feat:update language view

--- a/src/styles/pages/home/language.css
+++ b/src/styles/pages/home/language.css
@@ -24,7 +24,8 @@
   cursor: pointer;
 }
 
-.language__item:hover {
+.language__item:hover,
+.language__item.active {
   color: var(--primary-color);
   border: 1px solid var(--text-color);
 }
