--- a/src/styles/components/modal-confirm.css
+++ b/src/styles/components/modal-confirm.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   display: none;
-  backdrop-filter: blur(2px);
+  background-color: var(--overlay-color);
   z-index: 1;
 }
 
@@ -14,10 +14,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   border-radius: 15px;
-
   background-color: var(--light-color);
+  box-shadow: 0px 0px 60px var(--shadow-color);
+  backdrop-filter: blur(2px);
   overflow: hidden;
 }
 
