--- a/src/styles/components/modal-detail.css
+++ b/src/styles/components/modal-detail.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   display: none;
-  backdrop-filter: blur(2px);
+  background-color: var(--overlay-color);
   z-index: 1;
 }
 
@@ -22,6 +22,8 @@
   width: 496px;
   height: 747px;
   background: var(--light-color);
+  box-shadow: 0px 0px 60px var(--shadow-color);
+  backdrop-filter: blur(2px);
   transform: translate(-50%, -50%);
   z-index: 1;
 }
