--- a/src/styles/pages/login/login-form.css
+++ b/src/styles/pages/login/login-form.css
@@ -1,29 +1,37 @@
 .login-form {
   display: flex;
   justify-content: center;
+}
+
+.login-form__wrapper {
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 30px;
+  width: 500px;
   margin-top: 100px;
+  padding: 45px 0;
   border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
 .login-form__header {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 }
 
 .login-form__body {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
 
 .login-form__inputs {
   display: flex;
-  width: 350px;
   flex-wrap: wrap;
+  width: 380px;
 }
 
 .login-form__icon {
@@ -33,9 +41,9 @@
 }
 
 .login-form__input {
-  width: 291px;
+  width: 100%;
   height: 40px;
-  padding-left: 10px;
+  padding: 28px 16px;
   border: 1px solid var(--text-color);
   border-radius: 5px;
 }
@@ -45,7 +53,7 @@
 }
 
 .login-form__input + p {
-  padding: 10px 0 0 50px;
+  padding-top: 10px;
   visibility: hidden;
 }
 
