--- a/src/styles/components/modal-detail.css
+++ b/src/styles/components/modal-detail.css
@@ -1,28 +1,13 @@
 .modal-detail {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: none;
-  background-color: var(--overlay-color);
-  z-index: 1;
-}
-
-.modal-detail__wrapper {
-  position: fixed;
   left: 50%;
   top: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-
+  display: none;
   padding: 0 38px 45px 38px;
-
   width: 496px;
   height: 747px;
   background: var(--light-color);
-  box-shadow: 0px 0px 60px var(--shadow-color);
+  box-shadow: 0 2px 4px var(--shadow-color), 0 8px 16px var(--shadow-color);
   backdrop-filter: blur(2px);
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -65,5 +50,7 @@
 }
 
 .modal-detail.open {
-  display: block;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
