bugfix:fix clickable, list image default, label of select

--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -30,6 +30,7 @@
 .header__search__icon {
   width: 25px;
   height: 25px;
+  cursor: pointer;
 }
 
 .header__logout {
@@ -37,6 +38,7 @@
   border: none;
   outline: none;
   background-color: var(--primary-color);
+  cursor: pointer;
 }
 
 .header__logout::after {
