--- a/src/styles/pages/home/cards.css
+++ b/src/styles/pages/home/cards.css
@@ -32,7 +32,7 @@
   align-items: center;
   justify-content: center;
   min-width: 360px;
-  padding: 12px 0 25px 0;
+  padding: 40px 10px;
   border-radius: 15px;
   border: 1px solid var(--border-card-color);
   cursor: pointer;
