--- a/src/styles/pages/home/language.css
+++ b/src/styles/pages/home/language.css
@@ -8,9 +8,8 @@
 .language__list {
   display: flex;
   gap: 60px;
+  padding-bottom: 20px;
   overflow-x: scroll;
-  /* scrollbar-color: red;
-  scroll-margin-top: 20px; */
 }
 
 .language__item {
@@ -56,14 +55,12 @@
   opacity: 1;
 }
 
-/* .language__list::-webkit-scrollbar {
-  width: 200px;
-} */
-
-/* .language__list::-webkit-scrollbar-track {
-  margin: 20px;
+.language__list::-webkit-scrollbar {
+  width: 100%;
+  height: 12px;
 }
 
 .language__list::-webkit-scrollbar-thumb {
+  border-radius: 15px;
   background-color: var(--light-color);
-} */
+}
