bugfix:fix button delete of language

--- a/src/styles/pages/home/language.css
+++ b/src/styles/pages/home/language.css
@@ -38,6 +38,14 @@
   cursor: pointer;
 }
 
+.language__delete {
+  visibility: hidden;
+}
+
+.language__delete.active {
+  visibility: visible;
+}
+
 .language__delete:hover {
   opacity: 1;
 }
