feat:refactor code

--- a/src/styles/components/modal-confirm.css
+++ b/src/styles/components/modal-confirm.css
@@ -17,6 +17,7 @@
   padding: 30px;
   color: var(--light-color);
   background-color: var(--primary-color);
+  line-height: 1.5;
 }
 
 .modal-confirm__buttons {
