--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -33,12 +33,20 @@
   cursor: pointer;
 }
 
+.header__search__icon:hover {
+  opacity: 0.5;
+}
+
 .header__logout {
   position: relative;
   border: none;
   outline: none;
   background-color: var(--primary-color);
   cursor: pointer;
+}
+
+.header__logout:hover {
+  opacity: 0.7;
 }
 
 .header__logout::after {
