--- a/src/styles/components/modal-detail.css
+++ b/src/styles/components/modal-detail.css
@@ -44,6 +44,10 @@
   gap: 30px;
 }
 
+.modal-detail__description::first-letter {
+  text-transform: capitalize;
+}
+
 .modal-detail__buttons {
   display: flex;
   gap: 70px;
